# ProyectoIE0217

./: README.md
Avance/: Makefile  datos_apartamenos.txt
Avance/Inicio_sesion/: CMakeLists.txt  README.md  buscaraparta.cpp  buscaraparta.h  buscaraparta.ui  detalles_aparta.cpp  detalles_aparta.h  detalles_aparta.ui  infoaparta.cpp  infoaparta_admi.cpp  infoaparta_admi.h  infoaparta_admi.ui  infouser.cpp  infouser.h  infouser.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vista_user.cpp  vista_user.h  vista_user.ui  welcomewindow.cpp  welcomewindow.h  welcomewindow.ui  windowuser.cpp  windowuser.h  windowuser.ui
Avance/build-Inicio_sesion-Desktop-Debug/: CMakeCache.txt.prev  Inicio_sesion  Makefile  datos_apartamenos.txt  datos_usuario.txt  datos_usuarios.txt
Avance/build-Inicio_sesion-Desktop-Debug/Inicio_sesion_autogen/: mocs_compilation.cpp
Avance/build-Inicio_sesion-Desktop-Debug/Inicio_sesion_autogen/EWIEGA46WW/: moc_buscaraparta.cpp  moc_buscaraparta.cpp.d  moc_detalles_aparta.cpp  moc_detalles_aparta.cpp.d  moc_infoaparta.cpp  moc_infoaparta.cpp.d  moc_infoaparta_admi.cpp  moc_infoaparta_admi.cpp.d  moc_infouser.cpp  moc_infouser.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_stackedwidget_apartas.cpp  moc_stackedwidget_apartas.cpp.d  (+4 more)
Inicio_sesion/: CMakeLists.txt  infoaparta.cpp  infoaparta.h  infoaparta.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  vista_user.cpp  vista_user.h  vista_user.ui  welcomewindow.cpp  welcomewindow.h  welcomewindow.ui  windowuser.cpp  windowuser.h
Propuesta/: README.md
build-Inicio-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-Inicio_sesion-Desktop-Debug/: Inicio_sesion  Makefile  cmake_install.cmake  datos_usuario.txt  qtcsettings.cmake
build-Inicio_sesion-Desktop-Debug/Inicio_sesion_autogen/: mocs_compilation.cpp
build-Inicio_sesion-Desktop-Debug/Inicio_sesion_autogen/EWIEGA46WW/: moc_infoaparta.cpp  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_vista_user.cpp  moc_vista_user.cpp.d  moc_welcomewindow.cpp  moc_welcomewindow.cpp.d
build-Inicio_sesion-Desktop-Debug/Inicio_sesion_autogen/include/: ui_infoaparta.h  ui_mainwindow.h  ui_vista_user.h
(+46 files in other folders)
